--- a/quiz-cli/build.gradle
+++ b/quiz-cli/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
+    testCompile 'com.github.stefanbirkner:system-rules:1.18.0'
 }
 
 task execute(type:JavaExec) {
